cleanup, progress through separating library and events from Deno, etc

--- a/www/test.html
+++ b/www/test.html
@@ -38,6 +38,6 @@ img{border:1px solid #000;}
 <h1>h1 testing</h1>
 <h1>h2 assert</h1>
 <script type=module>
-import testing from "./lib/Deno.js";
+import untested from "./lib/untested.js";
 </script>
 </body></html>
